# bevy-jam5

./: ;  Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: town.glb
examples/: lockpicking_test.rs  player_movement_test.rs
src/: asset_loading.rs  cameras.rs  car_controller.rs  cubemap_factory.rs  custom_skybox.rs  damping.rs  home.rs  introduction.rs  lib.rs  main.rs  pause_menu.rs  resources.rs  rules.rs  simulation_state.rs  utils.rs  world_spawning.rs
src/car_controller/: bundles.rs  components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/car_controller/ui/: components.rs  mod.rs  plugin.rs  systems.rs
src/lockpicking/: components.rs  mod.rs  plugins.rs  systems.rs  ui.rs
src/lockpicking/instructions/: components.rs  mod.rs  plugin.rs  systems.rs
src/player_car_swap/: components.rs  mod.rs  plugins.rs  resources.rs  systems.rs
src/player_car_swap/ui/: components.rs  mod.rs  plugin.rs  systems.rs
src/player_controller/: components.rs  interaction.rs  mod.rs  plugins.rs  resources.rs  systems.rs
src/player_controller/interaction/: lockpicking.rs  pick_up.rs
src/player_controller/pick_up_instructions/: components.rs  mod.rs  plugin.rs  systems.rs
src/points/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/points/ui/: components.rs  mod.rs  plugin.rs  systems.rs
src/ui/: mod.rs
src/ui/pause_menu/: components.rs  mod.rs  plugins.rs  systems.rs
src/world_spawning/: on_spawn.rs
src/world_spawning/on_spawn/: bicycle.rs  car.rs  home.rs  map.rs  player.rs  trash.rs
