[package]
name = "bevy-jam5"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
avian3d = "0.1"
bevy_camera_extras = "0.10"
rand = "0.8"
bevy_asset_loader = "0.21.0"
#player_controller = {path = "crates/player_controller"}
bevy-inspector-egui = { version = "0.25.1", default-features = false, features = [
    "bevy_pbr",
    "bevy_render",
] }

[dependencies.bevy_outline_post_process]
git = "https://github.com/exvacuum/bevy_outline_post_process.git"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy-inspector-egui = { git = "https://github.com/mgi388/bevy-inspector-egui.git", branch = "manage_clipboard-fix" }
